Muitas mudanças. Muitas mudanças mesmo.
Essa versão já tem o update de Nícolas, com as melhorias dele. Além, tem melhorias adicionais.

Primeiro, note as mudanças da sessão, com a separação de método iniciaSessao() em defineSessao() e iniciaSessao(), além de um novo parâmetro "EMAIL". Você pode entender a necessidade ao ler a essência do código dessa minha parte.

Criação de perfil já funciona. Porém, ainda não sei como serão guardadas as coisas das habilidades. Por isso você a define na página de criação e não vê seu nome e descrição na página principal (isso seria somente uma forma de visualizar).

Note que apenas uma habilidade é setada na criação. As demais devem ser setadas nas configurações, e talvez nem aconteça nessa versão.

Devo ter esquecido de algo, mas creio que esses são os pontos principais. Todo o resto será falado por mim no próximo hangout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,15 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="email">E-mail</string>
-    <string name="cadastrar">Cadastrar novo Usuário</string>
+    <string name="cadastrar">Criar conta</string>
+    <string name="texto">Somos uma plataforma de\n aprendizagem mútua.\n\n
+        Aqui, todos são mestres em alguma coisa. Você vai aprender o que\n precisa e ensinar o que sabe.\n\n
+        Vamos começar definindo\n as suas habilidades.</string>
+    <string name="continuar">Continuar</string>
+    <string name="descricao">Descrição</string>
+    <string name="habilidade">Habilidade</string>
+    <string name="dica1">Matemática, português, etc.</string>
+    <string name="dica2">Descreva essa habilidade.</string>
+    <string name="dica3">Onde estuda? O que cursar?</string>
+    <string name="descricaoperfil">Descrição</string>
 </resources>
