teste p/ achar push commits

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="email">E-mail</string>
-    <string name="cadastrar">Criar conta</string>
+    <string name="cadastrar">Criar nova conta</string>
     <string name="texto">Somos uma plataforma de\n aprendizagem mútua.\n\n
         Aqui, todos são mestres em alguma coisa. Você vai aprender o que\n precisa e ensinar o que sabe.\n\n
         Vamos começar definindo\n as suas habilidades.</string>
