--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,10 @@
         Aqui, todos são mestres em alguma coisa. Você vai aprender o que\n precisa e ensinar o que sabe.\n\n
         Vamos começar definindo\n as suas habilidades.</string>
     <string name="continuar">Continuar</string>
+    <string name="finalizar">Finalizar</string>
     <string name="descricao">Descrição</string>
     <string name="habilidade">Habilidade</string>
+    <string name="necessidade">Necessidade</string>
     <string name="dica1">Matemática, português, etc.</string>
     <string name="dica2">Descreva essa habilidade.</string>
     <string name="dica3">Onde estuda? O que cursar?</string>
