Alteração da tela de configuração: Agora a tela de configuração será composta por botões que darão escolha do que realmente deseja ser alterado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,11 @@
     <string name="bottom_nav_title2">Buscar</string>
     <string name="bottom_nav_title3">Perfil</string>
     <string name="manterConectado">Manter conectado</string>
+    <string name="alterarNome">Alterar Nome</string>
+    <string name="alterarEmail">Alterar E-mail</string>
+    <string name="alterarSenha">Alterar Senha</string>
+    <string name="novaSenha">Nova Senha</string>
+    <string name="confirmarNovaSenha">Confirmar Nova Senha</string>
+    <string name="cancelar">Cancelar</string>
 
 </resources>
