--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="cancelar">Cancelar</string>
     <string name="copyright">The Learning © Project 2017</string>
     <string name="conta">Conta</string>
+    <string name="outrasOpcoes">Outras opções</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
