--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="manterConectado">Manter conectado</string>
     <string name="sim">Sim</string>
     <string name="nao">Não</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="alterarNome">Alterar Nome</string>
     <string name="alterarEmail">Alterar E-mail</string>
     <string name="alterarSenha">Alterar Senha</string>
