--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="outrasOpcoes">Outras opções</string>
     <string name="cadastrarHabilidade">Insira uma habilidade sua</string>
     <string name="cadastrarNecessidade">Insira uma necessidade sua</string>
+    <string name="cadastrarNovaHabilidade">Insira uma nova habilidade</string>
+    <string name="cadastrarNovaNecessidade">Insira uma nova necessidade</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
