--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,11 @@
     <string name="cadastrarNovaHabilidade">Insira uma nova habilidade</string>
     <string name="cadastrarNovaNecessidade">Insira uma nova necessidade</string>
     <string name="botaoExcluir">Botão Excluir</string>
+    <string name="informativo">Digite o número de telefone vinculado a sua conta</string>
+    <string name="titulo">Esqueceu sua senha?</string>
+    <string name="telefone">Telefone</string>
+    <string name="dica">Mensagem enviada, pode levar alguns minutos até o recebimento da mesma.</string>
+
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
