Novo fragment de interações!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="bottom_nav_title1">Recomendações</string>
     <string name="bottom_nav_title2">Buscar</string>
     <string name="bottom_nav_title3">Perfil</string>
+    <string name="bottom_nav_title4">Interações</string>
     <string name="manterConectado">Manter conectado</string>
     <string name="sim">Sim</string>
     <string name="nao">Não</string>
